Fix nominee image overlapping card

--- a/client/src/components/NominationCard/style.css
+++ b/client/src/components/NominationCard/style.css
@@ -1,4 +1,4 @@
-.nomination-image {
+.card-image.nomination-image {
   width: 20%;
   min-height: 0;
 }
